Rethink the sidebar. Lots of fixes for dark mode and BS5.

--- a/assets/sass/layout/_base.scss
+++ b/assets/sass/layout/_base.scss
@@ -2,6 +2,7 @@
 html,
 body {
 	height: 100%;
+	padding-top: 30px; /* TODO: Find out what causes extra margin on top */
 }
 .page-wrap {
 	min-height: 100%;
