--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -39,7 +39,7 @@
 		margin-left: -12px;
 	}
 
-	.user-menu.navbar-nav {
+	/*.user-menu.navbar-nav {
 		li {
 			a {
 				padding-top: $navbar-padding-vertical;
@@ -48,7 +48,7 @@
 				padding-right: 0.75rem;
 			}
 		}
-	}
+	}*/
 /*
 	a.navbar-brand:hover,
 	a.navbar-dropdown > a:hover,
