--- a/exercise/templates/exercise/_warnings_overlay.html
+++ b/exercise/templates/exercise/_warnings_overlay.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load course %}
 <div class="overlay exercise-warnings-overlay" id="overlay-{{ exercise.id }}">
-    <div class="card">
-        <div class="card-header bg-warning">
+    <div class="card text-bg-warning">
+        <div class="card-header">
             {% translate "CANNOT_SUMBIT_EXERCISE_WARNING" %}
         </div>
         <div class="panel-body">
