--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -90,7 +90,7 @@ iframe {
 }
 
 /* Menu groups */
-.navbar-nav > li.menu-groups {
+/*.navbar-nav > li.menu-groups {
 	> a.dropdown-toggle {
 		background: rgba(255, 0, 0, 0.3);
 		&:hover {
@@ -102,7 +102,7 @@ iframe {
 			background: rgba(255, 0, 0, 0.4);
 		}
 	}
-}
+}*/
 
 /* dropdown menu */
 .dropdown-menu > li button {
@@ -145,6 +145,8 @@ iframe {
     overflow: visible;
     clip: auto;
     padding: 15px;
+    display: flex;
+    justify-content: center;
 }
 
 .page-skip-link:focus {
@@ -155,14 +157,35 @@ iframe {
 /* menus */
 .course-menu .nav>li>a {
 	@include focus-with-background-and-color;
-    padding: 2px 2px 2px 5px;
+    padding: 2px 6px;
 }
-#main-course-menu.fixed {
-    position: fixed;
-    top: 20px;
-    bottom: 50px;
-    max-height: 100%;
-    overflow: auto;
+/* Make sidebar expand/collapse buttons keyboard-focusable */
+.course-menu .aplus-button--secondary, #bs-navbar-collapse .aplus-button--secondary {
+	@include focus-with-background-and-color;
+}
+@media (min-width: 768px) {
+    #bs-navbar-collapse {
+        display: block;
+        position: fixed;
+        top: 60px;
+        bottom: 50px;
+        max-height: 100%;
+        width: 16vw;
+        max-width: 16vw;
+        overflow: auto;
+        .minimised {
+            width: 44px;
+            margin-left: -10px;
+        }
+        a.nav-link {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+    }
+}
+#bs-navbar-collapse.minimised a.nav-link {
+    text-overflow: clip;
 }
 .course-menu .advert-thumbnail {
     margin-top: 4em;
@@ -193,13 +216,13 @@ iframe {
     max-width: 50%;
     text-overflow: ellipsis;
 }
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
     .col-md-2 .nav a {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
-}
+}*/
 .toc li {
     list-style: none;
 }
@@ -207,9 +230,11 @@ iframe {
 	@include focus-with-background-and-color;
 }
 @media (min-width: 768px) {
-	#course-content.sidebar-collapsed {
-		width: 100%;
-		padding-left: 40px;
+	#course-content {
+        padding-left: 16%;
+        &.sidebar-collapsed {
+            padding-left: 48px;
+        }
 	}
 }
 #main-course-menu li.header {
