--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -33,33 +33,37 @@
 {% block content %}
 <div data-taggings="{{ taggings|join:' ' }}" class="row">
 	{% block course_sidebar %}
-	<button
-		class="d-none course-sidebar-expander"
-		title="{% translate 'OPEN_SIDEBAR' %}"
-		aria-label="{% translate 'OPEN_SIDEBAR' %}"
-	>
-		<i class="bi-caret-right-fill" aria-hidden="true"></i>
-	</button>
-	<div class="col-md-2 d-none d-md-block" id="course-sidebar">
-		<nav class="course-menu" id="main-course-menu" aria-labelledby="course-menu-heading">
-			<ul class="nav nav-pills nav-stacked flex-column" aria-orientation="vertical">
-				{% include "course/_course_menu.html" %}
-			</ul>
-			{% site_advert as advert %}
-			{% if advert %}
-				<div class="thumbnail advert-thumbnail">
-					<div class="caption">
-						<h4>{{ advert.title }}</h4>
-						<p>{{ advert.text|safe }}</p>
-						<div class="buttons">
-							<a href="{{ advert.href }}" target="_blank">
-								{% translate "READ_MORE" %}
-							</a>
+	<div class="offcanvas-md offcanvas-start navbar-nav-scroll col-md-2" id="bs-navbar-collapse">
+		<button
+			class="aplus-button--secondary course-sidebar-expander d-none"
+			title="{% translate 'EXPAND_SIDEBAR' %}"
+			aria-label="{% translate 'EXPAND_SIDEBAR' %}"
+			data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{% translate 'EXPAND_SIDEBAR' %}"
+		>
+			<i class="bi-layout-text-sidebar" aria-hidden="true"></i>
+		</button>
+		<div class="offcanvas-body">
+			<button type="button" class="btn-close float-end d-none" data-bs-dismiss="offcanvas" data-bs-target="#bs-navbar-collapse" aria-label="Close"></button>
+			<nav class="course-menu" id="main-course-menu" aria-labelledby="course-menu-heading">
+				<ul class="nav nav-pills nav-stacked flex-column" aria-orientation="vertical">
+					{% include "course/_course_menu.html" %}
+				</ul>
+				{% site_advert as advert %}
+				{% if advert %}
+					<div class="thumbnail advert-thumbnail course-menu-label">
+						<div class="caption">
+							<h4>{{ advert.title }}</h4>
+							<p>{{ advert.text|safe }}</p>
+							<div class="buttons">
+								<a href="{{ advert.href }}" target="_blank">
+									{% translate "READ_MORE" %}
+								</a>
+							</div>
 						</div>
 					</div>
-				</div>
-			{% endif %}
-		</nav>
+				{% endif %}
+			</nav>
+		</div>
 
 		{% comment %}
 		<div class="calendar-view">
@@ -74,7 +78,7 @@
 		{% endcomment %}
 	</div>
 	{% endblock course_sidebar %}
-	<div class="col-md-10" id="course-content">
+	<div id="course-content">
 		{% if instance %}
 		{% course_alert instance %}
 		{% endif %}
