Fix raised issues for PR 1442; add TODO comments in commented out parts to possibly remove later

--- a/assets/sass/components/_breadcrumb.scss
+++ b/assets/sass/components/_breadcrumb.scss
@@ -6,10 +6,10 @@
 	border-radius: 4px;
 	/*> .active {
 		color: #333;
-	}*/
+	}*/ // TODO: CHECK FOR REMOVAL #1442
 }
 .breadcrumb>li+li:before {
 	padding: 0 5px;
-	//color: #ccc;
+	//color: #ccc; // TODO: CHECK FOR REMOVAL #1442
 	content: "/ ";
 }
