--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -48,7 +48,7 @@
 				padding-right: 0.75rem;
 			}
 		}
-	}*/
+	}*/ // TODO: CHECK FOR REMOVAL #1442
 /*
 	a.navbar-brand:hover,
 	a.navbar-dropdown > a:hover,
@@ -114,7 +114,7 @@
 			}
 		}
 	}
-*/
+*/ // TODO: CHECK FOR REMOVAL #1442
 	.navbar-dropdown {
 		div.dropdown-backdrop {
 			display: none;
@@ -198,5 +198,5 @@
 			}
 		}
 	}
-*/
+*/ // TODO: CHECK FOR REMOVAL #1442
 }
