--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -16,7 +16,7 @@ $body-bg: $aplus-background;
 /*$success: $aplus-success;
 $info: $aplus-info;
 $warning: $aplus-warning;
-$danger: $aplus-danger;*/
+$danger: $aplus-danger;*/ // TODO: CHECK FOR REMOVAL #1442
 
 //** Default progress bar color
 $progress-bar-bg: $aplus-brand-primary;
