--- a/templates/base.html
+++ b/templates/base.html
@@ -28,17 +28,17 @@
 	<script src="{% static 'js/popper.min.js' %}"></script>
 	<script src="{% static 'js/bootstrap5.min.js' %}"></script>
 
-	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
+	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">--> <!-- TODO: CHECK FOR REMOVAL #1442 -->
 	<!--<link href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" rel="stylesheet"
 			integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE"
 			crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://use.fontawesome.com/releases/v5.15.4/css/regular.css" rel="stylesheet"
 			integrity="sha384-e7wK18mMVsIpE/BDLrCQ99c7gROAxr9czDzslePcAHgCLGCRidxq1mrNCLVF2oaj"
-			crossorigin="anonymous" referrerpolicy="no-referrer" />-->
+			crossorigin="anonymous" referrerpolicy="no-referrer" />--> <!-- TODO: CHECK FOR REMOVAL #1442 -->
 
 	<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" rel="stylesheet"
 			integrity="sha512-0aPQyyeZrWj9sCA46UlmWgKOP0mUipLQ6OZXu8l4IcAmD2u31EPEy9VcIMvl7SoAaKe8bLXZhYoMaE/in+gcgA=="
-			crossorigin="anonymous" referrerpolicy="no-referrer" />-->
+			crossorigin="anonymous" referrerpolicy="no-referrer" />--> <!-- TODO: CHECK FOR REMOVAL #1442 -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"
 			integrity="sha512-rdhY3cbXURo13l/WU9VlaRyaIYeJ/KBakckXIvJNAQde8DgpOmE+eZf7ha4vdqVjTtwQt69bD2wH2LXob/LB7Q=="
 			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
