--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -102,7 +102,7 @@ iframe {
 			background: rgba(255, 0, 0, 0.4);
 		}
 	}
-}*/
+}*/ // TODO: CHECK FOR REMOVAL #1442
 
 /* dropdown menu */
 .dropdown-menu > li button {
@@ -200,7 +200,7 @@ iframe {
         background-color: var(--bs-info-bg-subtle, black);
         border-color: var(--bs-info-border-subtle, #333);
     }
-}*/
+}*/ // TODO: CHECK FOR REMOVAL #1442
 .course-menu .advert-thumbnail h4 {
     margin-top: 0;
 }
@@ -222,7 +222,7 @@ iframe {
         overflow: hidden;
         text-overflow: ellipsis;
     }
-}*/
+}*/ // TODO: CHECK FOR REMOVAL #1442
 .toc li {
     list-style: none;
 }
@@ -297,7 +297,7 @@ file for all the components */
 .panel-primary>.panel-heading .badge-success {
     border: 1px solid #fff;
     padding: 2px 6px;
-}*/
+}*/ // TODO: CHECK FOR REMOVAL #1442
 .unconfirmed-points {
   opacity: 0.6;
 }
@@ -333,7 +333,7 @@ td.submissions-dropdown {
     padding: 0 1em;
 }
 .exercise-summary .navbar-nav .navbar-text {
-    /*margin: 10px 15px 10px 15px;*/
+    /*margin: 10px 15px 10px 15px;*/ // TODO: CHECK FOR REMOVAL #1442
 }
 .exercise-summary .navbar-nav .navbar-text ul {
 	list-style: none;
