--- a/external_services/templates/external_services/list_menu.html
+++ b/external_services/templates/external_services/list_menu.html
@@ -50,7 +50,7 @@
 		</td>
 		<td>
 			{% if not menu.enabled %}
-			<span class="badge text-bg-default">{% translate "DISABLED" %}</span>
+			<span class="badge text-bg-secondary">{% translate "DISABLED" %}</span>
 			{% endif %}
 			<small class="text-body-secondary">{{ menu.access|menu_access }}</small>
 		</td>
