--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -15,7 +15,7 @@
     <form method="post" class="form-inline" action="{{ instance|url:'course-configure' }}">
       {% csrf_token %}
       <div class="form-group">
-        <label class="control-label" for="id_url">{% translate "IMPORT_CONTENT_CONFIG_URL" %}</label>
+        <label class="form-label" for="id_url">{% translate "IMPORT_CONTENT_CONFIG_URL" %}</label>
         <input type="text" size="60" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
       </div>
       <button class="aplus-button--default aplus-button--md" type="submit" name="apply"
@@ -84,7 +84,7 @@
                 <th>
                   <strong>{{ module|parse_localization }}</strong>
                   {% if module.status != 'ready' %}
-                  <span class="badge text-bg-default">{{ module.status }}</span>
+                  <span class="badge text-bg-secondary">{{ module.status }}</span>
                   {% endif %}
                 </th>
                 <td>
@@ -106,7 +106,7 @@
                 <td>
                     {{ lobject|parse_localization }}
                     {% if lobject.status != 'ready' %}
-                    <span class="badge text-bg-default">{{ lobject.status }}</span>
+                    <span class="badge text-bg-secondary">{{ lobject.status }}</span>
                     {% endif %}
                 </td>
                 <td>
