--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -71,7 +71,7 @@
 			<span class="badge text-bg-danger float-end">{% translate "HIDDEN_capitalized" %}</span>
 			{% endif %}
 			<div class="module-name">
-				<span class="caret" aria-hidden="true"></span>
+				<span class="dropdown-toggle" aria-hidden="true"></span>
 				{{ module.name|parse_localization }}
 			</div>
 		</h5>
@@ -162,7 +162,7 @@
 						<small class="text-body-secondary">{{ entry.category|parse_localization }}</small>
 					</td>
 					<td class="submissions-dropdown dropdown">
-						<a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button">
+						<a class="dropdown-toggle btn" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button">
 							<span class="badge text-bg-secondary">
 								{% if entry.notified %}
 								<i class="bi-comment{% if entry.unseen %} red{% endif %}"></i>
@@ -175,7 +175,7 @@
 						</a>
 						<ul class="dropdown-menu">
 							{% for submission in entry.submissions %}
-							<li>
+							<li class="dropdown-menu">
 								<a href="{{ submission.url }}" class="dropdown-item page-modal">
 									{{ forloop.revcounter }}.
 									{{ submission.date }}
